--- a/template/styles/global.css
+++ b/template/styles/global.css
@@ -1,6 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CRSV,MONO@300..800,0,1&display=swap');
 
+:root {
+  --gray-50:  #F7FAFC;
+  --gray-100: #EDF2F7;
+  --gray-200: #E2E8F0;
+  --gray-300: #CBD5E0;
+  --gray-400: #A0AEC0;
+  --gray-500: #718096;
+  --gray-600: #4A5568;
+  --gray-700: #2D3748;
+  --gray-800: #1A202C;
+  --gray-900: #171923;
+
+  --blue-50:  #EBF8FF;
+  --blue-100: #BEE3F8;
+  --blue-200: #90CDF4;
+  --blue-300: #63B3ED;
+  --blue-400: #4299E1;
+  --blue-500: #3182CE;
+  --blue-600: #2B6CB0;
+  --blue-700: #2C5282;
+  --blue-800: #2A4365;
+  --blue-900: #1A365D;
+}
+
+
 body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif,
@@ -18,15 +43,26 @@ code,
 }
 
 @media screen {
+
+  body {
+    background-color: var(--gray-50);
+  }
+
   .code {
-    border-radius: 6px;
-    background-color: #f5f7f9;
+    border-radius: 5px;
+    background-color: var(--gray-100);
+  }
+
+  code.inline {
+    line-height: 1.6em;
+    padding: 4px;
+    background-color: var(--gray-100);
   }
 
   pre.code {
     margin: 0;
     padding: 10px 0;
-    border: 1px solid #e7eaec;
+    border: 1px solid var(--gray-100);
   }
 
   .token.content {
@@ -53,7 +89,7 @@ code,
 
   * {
     scrollbar-width: thin;
-    scrollbar-color: rgb(201, 201, 201) transparent;
+    scrollbar-color: var(--gray-300) transparent;
   }
 
   *::-webkit-scrollbar-track {
@@ -62,23 +98,22 @@ code,
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: rgb(201, 201, 201);
+    background-color: var(--gray-300);
     border-radius: 10px;
   }
 
-  /*  */
 
   .dark-mode * {
-    scrollbar-color: rgb(65, 65, 65) transparent;
+    scrollbar-color: var(--gray-600) transparent;
   }
 
   .dark-mode *::-webkit-scrollbar-thumb {
-    background-color: rgb(65, 65, 65);
+    background-color: var(--gray-600);
   }
 
   .dark-mode pre,
   .dark-mode .code {
-    background-color: var(--dm-sidebar-bg-color);
+    background-color: var(--gray-800);
   }
 
   .check-icon {
@@ -87,17 +122,22 @@ code,
   }
 
   .sidebar-link {
-    padding: 5px 5px 5px 10px;
+    padding: 5px 5px 5px 15px;
+    color: var(--gray-900);
   }
   
   .part-items .sidebar-link {
-    padding: 0 5px 0 20px;
+    padding: 0 5px 5px 25px;
   }
 
   .sidebar {
     border: none;
-    background-color: #f5f7f9;
+    background-color: var(--gray-50);
     font-weight: 400;
+  }
+
+  .dark-mode .sidebar {
+    background-color: var(--gray-700);
   }
 
   kbd {
@@ -106,19 +146,18 @@ code,
 
   p code,
   li code {
-    background-color: #f5f7f9;
     padding: 2px 4px;
     border-radius: 4px;
   }
 
   .dark-mode p code,
   .dark-mode li code {
-    background-color: var(--dm-sidebar-bg-color);
+    background-color: var(--gray-800);
   }
 
   pre,
   .code.dark {
-    background-color: var(--dm-sidebar-bg-color);
+    background-color: var(--gray-800);
     color: var(--dm-code-text-color);
   }
 
@@ -142,11 +181,11 @@ code,
 
   .navbar {
     border: none;
-    box-shadow: 0px 0px 25px -12px rgba(0, 0, 0, 0.3);
+    background-color: var(--gray-50);
   }
 
   .dark-mode .navbar {
-    box-shadow: 0px 0px 25px -12px rgb(0, 0, 0, 0.8);
+    background-color: var(--gray-700);
   }
 
   .main-content ul > li {
@@ -282,9 +321,12 @@ code,
 
   .page-toc-container li {
     color: rgba(0, 0, 0, 0.5);
-    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    border-left: 1px solid var(--gray-200);
     font-weight: 400;
     font-size: 1.4rem;
+    padding: 0.3rem 0 0.3rem 0rem;
+    line-height: 2rem;
+    margin: 0;
   }
 
   .dark-mode .page-toc-container li {
@@ -293,15 +335,9 @@ code,
     font-weight: 400;
   }
 
-  .page-toc-container li {
-    padding: 0.3rem 0 0.3rem 0rem;
-    line-height: 2rem;
-    margin: 0;
-  }
-
   .page-toc-container li.page-toc-active {
-    color: black;
-    border-color: black;
+    color: var(--gray-700);
+    border-color: var(--gray-500);
   }
 
   .dark-mode .page-toc-container li.page-toc-active {
@@ -314,12 +350,13 @@ code,
     height: 26px;
     margin: 0;
     padding-bottom: 4px;
+    color: var(--gray-500);
   }
 
   blockquote {
     margin: 1em 0 1em 1em;
     padding-left: 1em;
-    border-left: 3px solid rgba(204, 204, 204, 0.452);
+    border-left: 3px solid var(--gray-300);
   }
 
   .img-fluid {
@@ -329,7 +366,27 @@ code,
   }
 
   .custom-table th {
-    background-color: #69696915;
+    background-color: var(--gray-100);
+  }
+
+  .dark-mode .custom-table th {
+    background-color: var(--gray-600);
+  }
+
+  .custom-table thead tr {
+    border-bottom: 1px solid var(--gray-200);
+  }
+
+  .dark-mode .custom-table thead tr {
+    border-bottom: 1px solid var(--gray-500);
+  }
+
+  .custom-table tbody tr:not(:last-child){
+    border-bottom: 1px solid var(--gray-200);
+  }
+
+  .dark-mode .custom-table tbody tr:not(:last-child){
+    border-bottom: 1px solid var(--gray-600);
   }
 
   .custom-table td[align='left'],
@@ -352,7 +409,7 @@ code,
 
   .react-syntax-highlighter-line-number {
     text-align: left !important;
-    color: #8d8d8d50 !important;
+    color: var(--gray-400) !important;
   }
 
   .copy-container {
@@ -396,12 +453,12 @@ code,
     border-radius: 6px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    background-color: #e7eaec;
+    background-color: var(--gray-200);
     font-family: inherit;
   }
 
   .dark-mode .code-header {
-    background-color: var(--dm-navbar-bg-color);
+    background-color: var(--gray-900);
   }
 
   .code-header + .code-body .code {
@@ -414,12 +471,12 @@ code,
   }
 
   .main-content a {
-    color: black;
+    color: var(--gray-700);
     text-decoration: underline;
   }
 
   .main-content a:hover {
-    color: var(--primary-color);
+    color: var(--gray-800);
     text-decoration: underline;
   }
 
@@ -428,7 +485,7 @@ code,
   }
 
   .dark-mode .main-content a:hover {
-    color: var(--primary-color);
+    color: var(--gray-50);
     text-decoration: underline;
   }
 
@@ -442,9 +499,10 @@ code,
 
   .next-page,
   .prev-page {
-    border: 1px solid var(--lm-horizontal-rule-color);
-    background-color: var(--lm-button-bg-color-hover);
-    border-radius: 6px;
+    border: 1px solid var(--gray-200);
+    background-color: var(--gray-100);
+    color: var(--gray-600)!important;
+    border-radius: 5px;
     width: 100%;
     text-decoration: none !important;
   }
@@ -456,13 +514,14 @@ code,
 
   .dark-mode .next-page,
   .dark-mode .prev-page {
-    border: 1px solid var(--dm-horizontal-rule-color);
-    background-color: var(--dm-button-bg-color);
+    border: 1px solid var(--gray-700);
+    background-color: var(--gray-600);
+    color: var(--gray-300)!important;
   }
 
   .next-page:hover,
   .prev-page:hover {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--gray-500);
   }
 
   /* Progress bar */
@@ -508,18 +567,14 @@ code,
   }
 
   .sidebar-section {
-    width: 100%;
-    border-bottom: 1px solid var(--lm-horizontal-rule-color);
-  }
-
-  .dark-mode .sidebar-section {
-    border-color: var(--dm-horizontal-rule-color);
+    width: 98%;
+    margin-bottom: 2px;
   }
 
   .sidebar-title {
     cursor: pointer;
     user-select: none;
-    padding: 10px 0 5px 15px;
+    padding: 10px 0 5px 20px;
     font-weight: 400;
   }
 
@@ -546,21 +601,23 @@ code,
   
   .dark-mode .current {
     font-weight: 500;
-    color: white;
+    color: var(--gray-200);
   }
   
   .dark-mode .content-wrapper {
-    background-color: var(--dm-base-body-bg-color);
+    background-color: var(--gray-700);
   }
 
   .dark-mode .open,
   .dark-mode .current.open:hover {
-    background-color: var(--dm-base-body-bg-color);
+    background-color: var(--gray-600);
   }
 
   .open,
   .current.open:hover {
-    background-color: white;
+    background-color: var(--gray-100);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
 
   .linked-heading span {
@@ -575,6 +632,7 @@ code,
 
   .logo {
     max-width: 222px;
+    font-weight: 500;
   }
 
   .logo a {
@@ -597,16 +655,64 @@ code,
     line-height: normal !important;
   }
 
-  .excalidraw {
-    background-color: #f5f7f9;
-  }
-
   .dark-mode .excalidraw {
     filter: invert(100%) hue-rotate(180deg);
   }
 
-  code.inline {
-    line-height: 1.6em;
-    padding: 4px;
+  .collapse-panel[open] .collapse-header {
+    background-color: var(--gray-100);
+    border-color: var(--gray-200);
+  }
+
+  .dark-mode .collapse-panel[open] .collapse-header {
+    background-color: var(--gray-500);
+    border-color: var(--gray-600);
+  }
+
+  details p:nth-child(2){
+    border-color: var(--gray-200);
+  }
+
+  .dark-mode details p:nth-child(2){
+    border-color: var(--gray-600);
+  }
+
+  .collapse-header:not(.without-arrow),
+  .collapse-header,
+  .collapse-panel[open] .collapse-header:focus,
+  .card {
+    background-color: var(--gray-100);
+    border-color: var(--gray-200);
+  }
+
+  .dark-mode .collapse-header:not(.without-arrow),
+  .dark-mode .collapse-header,
+  .dark-mode .collapse-panel[open] .collapse-header:focus,
+  .dark-mode .card {
+    background-color: var(--gray-800);
+    border-color: var(--gray-600);
+  }
+
+  .btn {
+    background-color: var(--gray-100);
+    border-color: var(--gray-300);
+  }
+
+  .btn:hover,
+  .btn.active, .btn:focus,
+  .btn.active:focus {
+    background-color: var(--gray-200);
+  }
+
+  .dark-mode .btn:hover,
+  .dark-mode .btn.active, 
+  .dark-mode .btn:focus,
+  .dark-mode .btn.active:focus {
+    background-color: var(--gray-500);
+  }
+
+  kbd {
+    background-color: var(--gray-100);
+    border-color: var(--gray-300);
   }
 }
