--- a/styles/app.css
+++ b/styles/app.css
@@ -74,6 +74,20 @@ li p {
 /* Use custom scrollbars. */
 @media (min-width: 769px) {
   /* Base scrollbar */
+
+  /* Firefox */
+ .with-custom-webkit-scrollbars, .with-custom-webkit-scrollbars *
+  {
+    scrollbar-color: #cbd5e1 transparent;
+    scrollbar-width: thin;
+  }
+  .dark.with-custom-webkit-scrollbars, .dark.with-custom-webkit-scrollbars * {
+    scrollbar-color: #334155 transparent;
+    scrollbar-width: thin;
+  }
+
+  /* Webkit based browsers */
+
   .with-custom-webkit-scrollbars *::-webkit-scrollbar {
     width: 1.4rem;
     height: 1.4rem;
@@ -82,15 +96,7 @@ li p {
   .dark.with-custom-webkit-scrollbars *::-webkit-scrollbar {
     background-color: transparent;
   }
-  .with-custom-webkit-scrollbars *::-webkit-scrollbar-track:vertical {
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-  }
-  .with-custom-webkit-scrollbars *::-webkit-scrollbar-track:horizontal {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-  }
-  .dark.with-custom-webkit-scrollbars *::-webkit-scrollbar-track {
-    border-color: rgba(255, 255, 255, 0.05);
-  }
+
   .with-custom-webkit-scrollbars *::-webkit-scrollbar-thumb {
     min-width: 3rem;
     min-height: 3rem;
@@ -123,16 +129,7 @@ li p {
     border-color: rgba(255, 255, 255, 0.05);
   }
 
-  .with-custom-css-scrollbars * {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(0, 0, 0, 0.25) #ffffff;
-  }
-  .dark .with-custom-css-scrollbars * {
-    scrollbar-color: rgba(255, 255, 255, 0.25) #25282c;
-  }
-
   /* Sidebar scrollbar */
-  /* Only on Windows */
   .with-custom-webkit-scrollbars .sidebar::-webkit-scrollbar {
     width: 1.4rem;
     height: 1.4rem;
@@ -141,13 +138,7 @@ li p {
   .dark.with-custom-webkit-scrollbars .sidebar::-webkit-scrollbar {
     background-color: transparent;
   }
-  .with-custom-webkit-scrollbars .sidebar::-webkit-scrollbar-track {
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
-  }
-  .dark.with-custom-webkit-scrollbars .sidebar::-webkit-scrollbar-track {
-    border-color: rgba(255, 255, 255, 0.05);
-  }
+
   .with-custom-webkit-scrollbars .sidebar::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.25);
     border-width: 0.4rem;
@@ -174,207 +165,5 @@ li p {
   .dark.with-custom-webkit-scrollbars .sidebar::-webkit-scrollbar-corner {
     background-color: transparent;
     border-color: rgba(255, 255, 255, 0.05);
-  }
-
-  .with-custom-css-scrollbars .sidebar {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(0, 0, 0, 0.25) #ffffff;
-  }
-  .dark .with-custom-css-scrollbars .sidebar {
-    scrollbar-color: rgba(255, 255, 255, 0.25) #191c20;
-  }
-
-  /* Modal scrollbar */
-
-  .with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar {
-    width: 1.4rem;
-    height: 1.4rem;
-    background-color: transparent;
-  }
-  .dark.with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar {
-    background-color: transparent;
-  }
-  .with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-track {
-    border-width: 1px;
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-  .dark.with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-track {
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-  .with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.25);
-    border-width: 0.4rem;
-    border-color: transparent;
-    border-radius: 1rem;
-  }
-  .with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.4);
-    border-color: transparent;
-  }
-  .dark.with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.25);
-    border-color: transparent;
-  }
-  .dark
-    .with-custom-webkit-scrollbars
-    .modal-dialog::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.4);
-    border-color: transparent;
-  }
-  .with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-corner {
-    background-color: transparent;
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
-  }
-  .dark.with-custom-webkit-scrollbars .modal-dialog::-webkit-scrollbar-corner {
-    background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-
-  .with-custom-css-scrollbars .modal-dialog {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(255, 255, 255, 0.25) transparent;
-  }
-  .dark .with-custom-css-scrollbars .modal-dialog {
-    scrollbar-color: rgba(255, 255, 255, 0.25) transparent;
-  }
-
-  /* Full screen modal scrollbar */
-
-  .with-custom-webkit-scrollbars .modal-full .modal-dialog::-webkit-scrollbar {
-    width: 1.4rem;
-    height: 1.4rem;
-    background-color: #ffffff;
-  }
-  .dark
-    .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar {
-    background-color: #191c20;
-  }
-  .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-track {
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
-  }
-  .dark
-    .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-track {
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-  .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.25);
-    border-width: 0.4rem;
-    border-color: transparent;
-    border-radius: 1rem;
-  }
-  .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-    border-color: transparent;
-  }
-  .dark
-    .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.25);
-    border-color: transparent;
-  }
-  .dark
-    .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.4);
-    border-color: transparent;
-  }
-  .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-corner {
-    background-color: #ffffff;
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
-  }
-  .dark
-    .with-custom-webkit-scrollbars
-    .modal-full
-    .modal-dialog::-webkit-scrollbar-corner {
-    background-color: #191c20;
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-
-  .with-custom-css-scrollbars .modal-full .modal-dialog {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(0, 0, 0, 0.25) #ffffff;
-  }
-  .dark .with-custom-css-scrollbars .modal-full .modal-dialog {
-    scrollbar-color: rgba(255, 255, 255, 0.25) #191c20;
-  }
-
-  /* Card scrollbar */
-
-  .with-custom-webkit-scrollbars .card::-webkit-scrollbar {
-    width: 1.4rem;
-    height: 1.4rem;
-    background-color: transparent;
-  }
-  .dark.with-custom-webkit-scrollbars .card::-webkit-scrollbar {
-    background-color: transparent;
-  }
-  .with-custom-webkit-scrollbars .card::-webkit-scrollbar-track {
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
-  }
-  .dark.with-custom-webkit-scrollbars .card::-webkit-scrollbar-track {
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-  .with-custom-webkit-scrollbars .card::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.25);
-    border-width: 0.4rem;
-    border-color: transparent;
-    border-radius: 1rem;
-  }
-  .with-custom-webkit-scrollbars .card::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-    border-color: transparent;
-  }
-  .dark.with-custom-webkit-scrollbars .card::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.25);
-    border-color: transparent;
-  }
-  .dark.with-custom-webkit-scrollbars .card::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.4);
-    border-color: transparent;
-  }
-  .with-custom-webkit-scrollbars .card::-webkit-scrollbar-corner {
-    background-color: transparent;
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
-  }
-  .dark.with-custom-webkit-scrollbars .card::-webkit-scrollbar-corner {
-    background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.05);
-  }
-
-  .with-custom-css-scrollbars .card {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(0, 0, 0, 0.25) #ffffff;
-  }
-  .dark .with-custom-css-scrollbars .card {
-    scrollbar-color: rgba(255, 255, 255, 0.25) #191c20;
-  }
-
-  /* CSS scrollbar with transparent track (utility class) */
-
-  .with-custom-css-scrollbars .css-scrollbar-transparent-track {
-    scrollbar-width: thin !important;
-    scrollbar-color: rgba(0, 0, 0, 0.25) transparent !important;
-  }
-  .dark .with-custom-css-scrollbars .css-scrollbar-transparent-track {
-    scrollbar-color: rgba(255, 255, 255, 0.25) transparent !important;
   }
 }
